--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../how-to-learn/styles/style.css">
+  <link rel="stylesheet" href="../how-to-learn/styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-    <header class="header">
-
+    <header class="header ">
+      <!-- <div class="logo logo_place_header"></div> -->
     </header>
     <main class="content">
       <section class="description">
