--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
-      <section class="description">
-        <div class="two-columns">
-            <h2 class="brief">Главные проблемы в обучении</h2>
-            <div class="main-text">
-              <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-              <p class="paragraph space__main-text"><span class="big">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-              <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+      <section class="description border">
+        <div class="two-columns border">
+            <h2 class="brief border"><a href="#">Главные проблемы в обучении</a></h2>
+            <div class="main-text border">
+              <p class="paragraph border">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="paragraph border"><span class="span">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="paragraph border">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
 
 
