--- a/index.html
+++ b/index.html
@@ -9,38 +9,157 @@
 </head>
 <body>
   <div class="page">
-    <header class="header ">
+    <header class="header">
       <div class="logo logo_place_header"></div>
-      <div><p class="header__title">Научиться учиться</p></div>
-      <div><p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href=# class="link">Узнать &rarr;</a></p></div>
-      <div class="header__main-illustration" title="Опять двойка"></div>
+      <p class="header__title">Научиться учиться</p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href=# class="link">Узнать &rarr;</a></p>
+      <div class="header__main-illustration" title="Опять двойка" alt="Опять двойка"></div>
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
-      <section class="description border">
-        <div class="two-columns border">
-            <h2 class="brief border"><a href="#">Главные проблемы в обучении</a></h2>
-            <div class="main-text border">
-              <p class="paragraph border">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-              <p class="paragraph border"><span class="span">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-              <p class="paragraph border">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+      <section class="description">
+        <div class="two-columns">
+            <h2 class="brief"><a href="#">Главные проблемы в обучении</a></h2>
+            <div class="main-text">
+              <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="paragraph paragraph_center"><span class="span">Вывод:&nbsp;</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
-
-
         </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <div class="table">
+          <div class="table__cell">
+            <h2 class="table__heading">86 миллиардов</h2>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">2.1 миллиарда</h2>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__bank">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">1000 терабайт</h2>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">500 триллионов</h2>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">420 миллионов</h2>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__bank">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">17–20 лет</h2>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">1885 год</h2>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h2 class="table__heading">1889 год</h2>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <div class="feynman__img"></div>
+        <h2 class="feynman__title">Метод Фейнмена</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <p class="feynman__link"><a href="#">Подробнее &rarr;</a></p>
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="triangle"></div>
+        <div class="table_theme_dark">
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">1</h2>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">2</h2>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">3</h2>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">4</h2>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">5</h2>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">6</h2>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">7</h2>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">8</h2>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">9</h2>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h2 class="table__heading_theme_dark">10</h2>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="columns">
+      <div class="column__content_copyright">
+        <div class="logo__place_footer"></div>
+        <div class="footer__author">&copy; 2022 Кирилл Сидорков</div>
+      </div>
+      <div class="column__content_info">
+        <div class="footer__column-heading">О Практикуме</div>
+        <div class="footer__column-links">
+          <p class="column-link">Главная</p>
+          <p class="column-link">Концепция</p>
+          <p class="column-link">Наставники</p>
+        </div>
+      </div>
+      <div class="column__content_social">
+        <div class="footer__column-heading">Соцсети</div>
+        <div class="footer__column-links">
+          <a href="#">
+            <div class="footer__social-icon footer__social-icon_Facebook"></div>
+            <p>Facebook</p>
+          </a>
+        </div>
+        <div class="footer__column-links">
+          <a href="#">
+            <div class="footer__social-icon footer__social-icon_ВКонтакте"></div>
+            <p>ВКонтакте</p>
+          </a>
+        </div>
+        <div class="footer__column-links">
+          <a href="#">
+            <div class="footer__social-icon footer__social-icon_Instagram"></div>
+            <p>Instagram</p>
+          </a>
+        </div>
+      </div>
+      </div>
     </footer>
   </div>
 </body>
