--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header"></div>
+      <div class="logo logo_place_header" title="Логотип" alt="Логотип"></div>
       <div class="header__main-illustration" title="Опять двойка" alt="Опять двойка"></div>
       <div class="header__square-pic"></div>
       <p class="header__title">Научиться учиться</p>
@@ -70,7 +70,7 @@
       </section>
 
       <section class="feynman">
-        <div class="feynman__img"></div>
+        <div class="feynman__img" title="Фейнмен" alt="Фейнмен"></div>
         <h2 class="feynman__title">Метод Фейнмена</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
@@ -79,7 +79,7 @@
       <section class="kaufman">
         <h2 class="section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle" title="Треугольник" alt="Треугольник"></div>
         <div class="table_theme_dark">
           <div class="table__cell_theme_dark">
             <h2 class="table__heading_theme_dark">1</h2>
@@ -127,7 +127,7 @@
     <footer class="footer">
       <div class="footer__columns">
       <div class="footer__column_content_copyright">
-        <div class="logo logo__place_footer"></div>
+        <div class="logo logo__place_footer" title="Логотип" alt="Логотип"></div>
         <div class="footer__author">&copy; 2022 Кирилл Сидорков</div>
       </div>
       <div class="footer__column_content_info">
@@ -141,26 +141,26 @@
         <div class="footer__column_content_social">
           <div class="footer__column-heading">Соцсети</div>
           <div class="footer__column-links footer__column-links_nowrap">
-            <a href="#">
-              <div class="footer__social-icon footer__column-links_Facebook"></div>
+            <a href="https://facebook.com/yandex.practicum">
+              <div class="footer__social-icon footer__column-links_Facebook" title="Логотип Facebook" alt="Логотип Facebook"></div>
             </a>
-            <a href="#">
+            <a href="https://facebook.com/yandex.practicum">
               <div class="column-link">Facebook</div>
             </a>
           </div>
           <div class="footer__column-links footer__column-links_nowrap">
-            <a href="#">
-              <div class="footer__social-icon footer__column-links_ВКонтакте"></div>
+            <a href="https://vk.com/yandex.practicum">
+              <div class="footer__social-icon footer__column-links_ВКонтакте" title="Логотип VK" alt="Логотип VK"></div>
             </a>
-            <a href="#">
+            <a href="https://vk.com/yandex.practicum">
               <div class="column-link">ВКонтакте</div>
             </a>
           </div>
           <div class="footer__column-links footer__column-links_nowrap">
-            <a href="#">
-              <div class="footer__social-icon footer__column-links_Instagram"></div>
+            <a href="https://www.instagram.com/yandex.practicum/">
+              <div class="footer__social-icon footer__column-links_Instagram" title="Логотип Instagram" alt="Логотип Instagram"></div>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/yandex.practicum/">
               <div class="column-link column-link_last">Instagram</div>
             </a>
           </div>
