--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
-            <h3 clah3ss="table__heading">86 миллиардов</h3>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
