--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--<link rel="stylesheet" href="./styles/style.css">-->
   <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -14,7 +13,7 @@
       <img class="header__main-illustration" src="./images/header-image.png" title="Опять двойка" alt="Опять двойка">
       <div class="header__square-pic"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link header__link">Узнать &rarr;</a></p>
     </header>
     <main class="content">
       <section class="description">
@@ -72,7 +71,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмена</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" class="link feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
@@ -132,21 +131,21 @@
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
+            <a href="#" class="link footer__column-link">Главная</a>
+            <a href="#" class="link footer__column-link">Концепция</a>
+            <a href="#" class="link footer__column-link">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
-            <a href="https://facebook.com/yandex.practicum" class="footer__column-link">
+            <a href="https://facebook.com/yandex.practicum" class="link footer__column-link">
               <img class="footer__social-icon" src="./images/facebook_color_white.svg" title="Логотип Facebook" alt="Логотип Facebook">Facebook
             </a>
-            <a href="https://vk.com/yandex.practicum" class="footer__column-link">
+            <a href="https://vk.com/yandex.practicum" class="link footer__column-link">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" title="Логотип VK" alt="Логотип VK">ВКонтакте
             </a>
-            <a href="https://www.instagram.com/yandex.practicum/" class="footer__column-link">
+            <a href="https://www.instagram.com/yandex.practicum/" class="link footer__column-link">
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" title="Логотип Instagram" alt="Логотип Instagram">Instagram
             </a>
           </nav>
