--- a/index.html
+++ b/index.html
@@ -27,6 +27,38 @@
         </article>
       </section>
 
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <div class="cards__image"></div>
+            <div class="cards__title"></div>
+            <div class="cards__description"></div>
+          </div>
+          <div class="cards__item">
+            <div class="cards__image"></div>
+            <div class="cards__title"></div>
+            <div class="cards__description"></div>
+          </div>
+          <div class="cards__item">
+            <div class="cards__image"></div>
+            <div class="cards__title"></div>
+            <div class="cards__description"></div>
+          </div>
+          <div class="cards__item">
+            <div class="cards__image"></div>
+            <div class="cards__title"></div>
+            <div class="cards__description"></div>
+          </div>
+          <div class="cards__item">
+            <div class="cards__image"></div>
+            <div class="cards__title"></div>
+            <div class="cards__description"></div>
+          </div>
+        </div>
+      </section>
+
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
