--- a/index.html
+++ b/index.html
@@ -32,31 +32,37 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <div class="cards__image"></div>
+            <img class="cards__image" src="images/cards-attention.png" alt="Два вида внимания">
             <div class="cards__title"></div>
             <div class="cards__description"></div>
           </div>
           <div class="cards__item">
-            <div class="cards__image"></div>
+            <img class="cards__image" src="images/cards-recall.png" alt="Recall">
             <div class="cards__title"></div>
             <div class="cards__description"></div>
           </div>
           <div class="cards__item">
-            <div class="cards__image"></div>
+            <img class="cards__image" src="images/cards-interliving.png" alt="Интерливинг">
             <div class="cards__title"></div>
             <div class="cards__description"></div>
           </div>
           <div class="cards__item">
-            <div class="cards__image"></div>
+            <img class="cards__image" src="images/cards-question.png" alt="Вопросы">
             <div class="cards__title"></div>
             <div class="cards__description"></div>
           </div>
           <div class="cards__item">
-            <div class="cards__image"></div>
+            <img class="cards__image" src="images/cards-competence.png" alt="Иллюзия компетентности">
             <div class="cards__title"></div>
             <div class="cards__description"></div>
           </div>
         </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмена</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="link feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -98,12 +104,6 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
-      </section>
-
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмена</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="link feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
