--- a/index.html
+++ b/index.html
@@ -33,30 +33,48 @@
         <div class="cards">
           <div class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="Два вида внимания">
-            <div class="cards__title"></div>
-            <div class="cards__description"></div>
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="images/cards-recall.png" alt="Recall">
-            <div class="cards__title"></div>
-            <div class="cards__description"></div>
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="images/cards-interliving.png" alt="Интерливинг">
-            <div class="cards__title"></div>
-            <div class="cards__description"></div>
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="images/cards-question.png" alt="Вопросы">
-            <div class="cards__title"></div>
-            <div class="cards__description"></div>
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" src="images/cards-competence.png" alt="Иллюзия компетентности">
-            <div class="cards__title"></div>
-            <div class="cards__description"></div>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
         </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe type="text/html" src="https://www.youtube.com/watch?v=arj7oStGLkU" class="video__iframe"></iframe>
+          <iframe type="text/html" src="https://www.youtube.com/watch?v=5MgBikgcWnY" class="video__iframe"></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
       </section>
 
       <section class="feynman">
@@ -153,6 +171,18 @@
           </div>
         </div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип arzamas">
+          <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип n+1">
+          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип strelka">
+          <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип полка">
+        </div>
+      </section>
+
     </main>
     <footer class="footer">
       <div class="footer__columns">
