--- a/index.html
+++ b/index.html
@@ -131,11 +131,9 @@
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
           <h2 class="khan__quote-author">Джордж Лукас</h2>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-          <div class=khan__book-container">
+          <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Весь мир - школа">
-            <div>
-              <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
-            </div>
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
