--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe type="text/html" src="https://www.youtube.com/watch?v=arj7oStGLkU" class="video__iframe"></iframe>
-          <iframe type="text/html" src="https://www.youtube.com/watch?v=5MgBikgcWnY" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" class="video__iframe"></iframe>
         </div>
       </section>
 
