--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="images/cards-recall.png" alt="Recall">
+            <img class="cards__image" src="images/cards-recall.png" alt="Отказ">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
