--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" title="Логотип" alt="Логотип">
       <img class="header__main-illustration" src="./images/header-image.png" title="Опять двойка" alt="Опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link header__link">Узнать &rarr;</a></p>
     </header>
@@ -63,8 +63,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" class="video__iframe"></iframe>
-          <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe"></iframe>
         </div>
       </section>
 
@@ -128,7 +128,7 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <h2 class="khan__quote-author">Джордж Лукас</h2>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -141,7 +141,7 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -190,10 +190,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип arzamas">
-          <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип n+1">
-          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип strelka">
-          <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип полка">
+          <a href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип arzamas"></a>
+          <a href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип n+1"></a>
+          <a href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип strelka"></a>
+          <a href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип полка"></a>
         </div>
       </section>
 
