--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </section>
 
       <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмена</h2>
+         <h2 class="feynman__title">Метод Фейнмена</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="link feynman__link">Подробнее &rarr;</a>
       </section>
@@ -133,7 +133,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Весь мир - школа">
-            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+            <a href="#" class="link khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -190,10 +190,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип arzamas"></a>
-          <a href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип n+1"></a>
-          <a href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип strelka"></a>
-          <a href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип полка"></a>
+          <a href="#" class="link"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип arzamas"></a>
+          <a href="#" class="link"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип n+1"></a>
+          <a href="#" class="link"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип strelka"></a>
+          <a href="#" class="link"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип полка"></a>
         </div>
       </section>
 
